# NezukoBot

./: .env.example  .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  config.py  get_invite_link.rs  install-deps.sh  main.py  nezuko.db  pelican-start.sh  requirements.txt
.cargo/: config.toml
bot/: client.py
bot/cogs/: admin.py  economy.py  fun.py  moderation.py  music.py  utility.py
bot/events/: on_member_join.py  on_member_remove.py  on_message.py  on_voice_state.py
bot/systems/: automod.py  giveaways.py  levels.py  logging.py  tickets.py  voice.py
bot/utils/: checks.py  database.py  embeds.py  helpers.py
database/: __init__.py  connection.py
database/models/: __init__.py  autorole.py  economy.py  giveaway.py  guild.py  level_role.py  log.py  member.py  ticket.py  voice_channel.py  warning.py
lavalink/: application.yml
migrations/: 20250101000000_init.sql
src/: config.rs  events.rs  handler.rs  main.rs
src/commands/: admin.rs  economy.rs  fun.rs  mod.rs  moderation.rs  utility.rs
src/database/: mod.rs  models.rs
src/utils/: embeds.rs  mod.rs
web/: README.md  app.py  middleware.py
web/routes/: __init__.py  api.py  auth.py  dashboard.py  public.py
web/static/css/: style.css
web/static/js/: dashboard.js
web/templates/: 404.html  500.html  base.html  dashboard.html  features.html  guild_settings.html  index.html  invite.html  invite_bot.html  login.html
