[package]
name = "nezuko_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6"
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "cache", "voice"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4"
parking_lot = "0.12"

axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = { version = "0.4", features = ["util"] }

songbird = { version = "0.5", features = ["serenity", "builtin-queue"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
